--- a/dj/templates/dj/remind_password.html
+++ b/dj/templates/dj/remind_password.html
@@ -1,12 +1,12 @@
 {% extends "dj/base.html" %}
 
 {% block content %}
-    <section id="login" class="p-b-10">
+    <section id="remind_password" class="p-b-10">
         <div class="container">
             <div class="row">
                 <div class="col-lg-10 mx-auto">
 
-                    <h2>Logowanie</h2>
+                    <h2>Przypominanie hasła</h2>
                     <hr /><br />
                     <form class="form-horizontal" action="" role="form" method="post">
                         {% csrf_token %}
@@ -14,18 +14,10 @@
 
                         <div class="form-group">
                             <div class="p-l-5 offset-lg-3 col-lg-10 offset-sm-3 col-sm-9">
-                                <button id="login_btn" type="submit" class="btn btn-primary">Zaloguj</button>
+                                <button id="login_btn" type="submit" class="btn btn-primary">Wyślij wiadomość</button>
                             </div>
                         </div>
                     </form>
-                    <a id="forgotten password" href="{% url 'dj:remind_password' %}">
-                        Przypomnij mi hasło!
-                    </a>
-                    <br /><br />
-                    <a id="coordinator_login" href="{% url 'coordinatepanel:coordinator_login' %}">
-                        Szukasz panelu dla koordynatora?
-                    </a>
-
                 </div>
             </div>
         </div>
