Add some changes

--- a/coordinatepanel/templates/coordinatepanel/participant_details.html
+++ b/coordinatepanel/templates/coordinatepanel/participant_details.html
@@ -48,10 +48,10 @@
                         {{ participant.guardian_name }}
                     {% endif %}
 
-                    {% if participant.phone_number is not None %}
+                    {% if participant.guardian_phone_number is not None %}
                         <br />
                         <span class="bold">Nr telefonu opiekuna:</span>
-                        {{ participant.phone_number }}
+                        {{ participant.guardian_phone_number }}
                     {% endif %}
 
                     <br />
