--- a/dj/templates/dj/music_training_sign.html
+++ b/dj/templates/dj/music_training_sign.html
@@ -20,6 +20,9 @@
                         <a class="link-decoration-none" href="{% url 'dj:workshop_sign' %}">
                             <button class="btn btn-info m-b-10">Warsztaty</button>
                         </a>
+                        <a class="link-decoration-none" href="{% url 'dj:event_simple_registration' %}">
+                            <button class="btn btn-danger m-b-10">Inne</button>
+                        </a>
                     </span>
 
                     <h2>Zapisz się na warsztaty muzyczne</h2>
