Enable searching participants by zip code

--- a/homepanel/templates/homepanel/all_participants.html
+++ b/homepanel/templates/homepanel/all_participants.html
@@ -11,7 +11,7 @@
                             <button class="btn btn-info m-b-10">Dane z csv</button>
                         </a>-->
                         <a class="link-decoration-none"  href="{% url 'homepanel:export_participants_to_csv' %}">
-                            <button class="btn btn-info m-b-10">Export do CSV</button>
+                            <button class="btn btn-info m-b-10">Eksport do CSV</button>
                         </a>
                         <a class="link-decoration-none" href="{% url 'homepanel:add_participant' %}">
                             <button class="btn btn-default m-b-10">Dodaj podopiecznego</button>
