--- a/coordinatepanel/templates/coordinatepanel/volunteer_details.html
+++ b/coordinatepanel/templates/coordinatepanel/volunteer_details.html
@@ -177,6 +177,11 @@
                     {% endif %}
 
                     <br />
+                    <span class="bold">Doświadczenie: </span>{{ volunteer.experience }}
+                    <br />
+                    <span class="bold">Wydolność fizyczna: </span>{{ volunteer.physical_performance }}
+
+                    <br />
                     <br />
 
                     <ul>
