--- a/homepanel/templates/homepanel/batch_details.html
+++ b/homepanel/templates/homepanel/batch_details.html
@@ -11,7 +11,7 @@
                             <button class="btn btn-info m-b-10">Eksport do xlsx</button>
                         </a>
                     </span>
-                    
+
                     <h2>{{ batch_details }}</h2>
                     <hr /><br />
 
@@ -46,6 +46,10 @@
                     <span class="bold">Kobiety:</span> {{ women }}
                     <br />
                     <span class="bold">Kobiety na wózkach:</span> {{ women_wheelchair }}
+                    <br />
+                    <span class="bold">Punkty podopiecznych:</span> {{ participant_points }}
+                    <br />
+                    <span class="bold">Punkty wolontariuszy:</span> {{ volunteer_points }}
                     <br />
                     <span class="bold">Lista rezerowowa:</span> {{ reserve_list }}
                     <br />
