--- a/homepanel/templates/homepanel/participant_details.html
+++ b/homepanel/templates/homepanel/participant_details.html
@@ -79,6 +79,13 @@
                     {% endif %}
 
                     <br />
+                    <span class="medium-bold">K1: </span>{{ participant.k_1 }}
+                    <br />
+                    <span class="medium-bold">K2: </span>{{ participant.k_2 }}
+                    <br />
+                    <span class="medium-bold">K3: </span>{{ participant.k_3 }}
+
+                    <br />
                     <span class="medium-bold">Uwagi:</span>
                         <ul>
                         {% if participant.cat is True %}
@@ -114,7 +121,7 @@
                         {% endif %}
                         </ul>
                     {{ participant.others }}
-                    
+
                     <br />
                     <br />
 
