--- a/coordinatepanel/templates/coordinatepanel/training_people.html
+++ b/coordinatepanel/templates/coordinatepanel/training_people.html
@@ -1,5 +1,6 @@
 {% extends "coordinatepanel/base.html" %}
 {% load mathfilters %}
+{% load auth_extras %}
 {% load static %}
 
 {% block content %}
@@ -18,7 +19,9 @@
                                         <a class="medium-bold" href="{% url 'coordinatepanel:person_details' training.id obj.person.id %}">
                                             {{ obj.person.surname }} {{ obj.person.first_name }}
                                         </a>
-                                        <span class="bd_cake"></span>
+                                        {% if obj|has_birthday %}
+                                             <i class="fa fa-birthday-cake blue"></i>
+                                        {% endif %}
                                         - pokój:
                                         {% if obj.room is not None %}
                                             {{ obj.room }}
@@ -49,9 +52,6 @@
                         {% endfor %}
                     </ul>
 
-                    <span id="begin_date" class="hidden">{{ training.begin_date|date:"Y.m.d" }}</span>
-                    <span id="end_date" class="hidden">{{ training.end_date|date:"Y.m.d" }}</span>
-
                     <br />
                     <a class="link-decoration-none" href="{% url 'coordinatepanel:training_details' training.id %}">
                         <button class="btn btn-default">Wróć</button>
@@ -63,8 +63,4 @@
             </div>
         </div>
     </section>
-{% endblock %}
-
-{% block extra_body_base %}
-    <script src="{% static 'js/count_birthday.js' %}"></script>
 {% endblock %}
