--- a/coordinatepanel/templates/coordinatepanel/event_participants.html
+++ b/coordinatepanel/templates/coordinatepanel/event_participants.html
@@ -1,4 +1,5 @@
 {% extends "coordinatepanel/base.html" %}
+{% load auth_extras %}
 {% load static %}
 
 {% block content %}
@@ -18,7 +19,9 @@
                                     <a class="medium-bold" href="{% url 'coordinatepanel:event_participant_details' event_id obj.participant.id %}">
                                         {{ obj.participant.surname }} {{ obj.participant.first_name }}&nbsp;
                                     </a>
-                                    <span class="bd_cake"></span>
+                                    {% if obj|has_birthday %}
+                                         <i class="fa fa-birthday-cake blue"></i>
+                                    {% endif %}
                                     {% if obj.is_paid is True %}
                                         <span class="green medium-bold">(zapłacono)</span>
                                     {% else %}
@@ -47,9 +50,6 @@
                         {% endfor %}
                     </ul>
 
-                    <span id="begin_date" class="hidden">{{ event.event.begin_date|date:"Y.m.d" }}</span>
-                    <span id="end_date" class="hidden">{{ event.event.end_date|date:"Y.m.d" }}</span>
-
                     <br />
 
                     <a  class="link-decoration-none" href="{% url 'coordinatepanel:event_details' event_id %}">
@@ -61,8 +61,4 @@
         </div>
     </section>
 
-{% endblock %}
-
-{% block extra_body_base %}
-    <script src="{% static 'js/count_birthday.js' %}"></script>
 {% endblock %}
