--- a/coordinatepanel/templates/coordinatepanel/participants.html
+++ b/coordinatepanel/templates/coordinatepanel/participants.html
@@ -1,4 +1,5 @@
 {% extends "coordinatepanel/base.html" %}
+{% load auth_extras %}
 {% load static %}
 
 {% block content %}
@@ -24,7 +25,9 @@
                                     <a class="medium-bold" href="{% url 'coordinatepanel:participant_details' batch_id obj.participant.id %}">
                                         {{ obj.participant.surname }} {{ obj.participant.first_name }}
                                     </a>
-                                    <span class="bd_cake"></span>
+                                    {% if obj|has_birthday %}
+                                         <i class="fa fa-birthday-cake blue"></i>
+                                    {% endif %}
                                     {% if obj.is_paid is True %}
                                         <span class="green medium-bold">(zapłacono)</span>
                                     {% elif obj.is_part_paid is True %}
@@ -72,7 +75,9 @@
                                     <a class="medium-bold" href="{% url 'coordinatepanel:participant_details' batch_id obj.participant.id %}">
                                         {{ obj.participant.surname }} {{ obj.participant.first_name }}
                                     </a>
-                                    <span class="bd_cake"></span>
+                                    {% if obj|has_birthday %}
+                                         <i class="fa fa-birthday-cake blue"></i>
+                                    {% endif %}
                                     {% if obj.is_paid is True %}
                                         <span class="green medium-bold">(zapłacono)</span>
                                     {% elif obj.is_part_paid is True %}
@@ -125,7 +130,9 @@
                                     <a class="medium-bold" href="{% url 'coordinatepanel:participant_details' batch_id obj.participant.id %}">
                                         {{ obj.participant.surname }} {{ obj.participant.first_name }}
                                     </a>
-                                    <span class="bd_cake"></span>
+                                    {% if obj|has_birthday %}
+                                         <i class="fa fa-birthday-cake blue"></i>
+                                    {% endif %}
                                     - {{ obj.sign_date|date:"d.m.Y H:i" }}
                                     {% if obj.room is not None %} pokój: {{ obj.room }}{% endif %}
                                     {% if obj.volunteer is not None %}, wolontariusz: {{ obj.volunteer }}{% endif %}
@@ -164,7 +171,9 @@
                                     <a class="medium-bold" href="{% url 'coordinatepanel:participant_details' batch_id obj.participant.id %}">
                                         {{ obj.participant.surname }} {{ obj.participant.first_name }}
                                     </a>
-                                    <span class="bd_cake"></span>
+                                    {% if obj|has_birthday %}
+                                         <i class="fa fa-birthday-cake blue"></i>
+                                    {% endif %}
                                     - {{ obj.sign_date|date:"d.m.Y H:i" }}
                                     {% if obj.room is not None %} pokój: {{ obj.room }}{% endif %}
                                     {% if obj.volunteer is not None %}, wolontariusz: {{ obj.volunteer }}{% endif %}
@@ -193,9 +202,6 @@
                         {% endfor %}
                     </ul>
 
-                    <span id="begin_date" class="hidden">{{ batch.begin_date|date:"Y.m.d" }}</span>
-                    <span id="end_date" class="hidden">{{ batch.end_date|date:"Y.m.d" }}</span>
-
                     <br />
 
                     <a  class="link-decoration-none" href="{% url 'coordinatepanel:batch_view' batch_id %}">
@@ -208,8 +214,4 @@
         </div>
     </section>
 
-{% endblock %}
-
-{% block extra_body_base %}
-    <script src="{% static 'js/count_birthday.js' %}"></script>
 {% endblock %}
